--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@types/react-dom": "^18.2.6",
     "astro": "^2.7.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwindcss-animated": "^1.0.1"
   },
   "devDependencies": {
     "tailwindcss": "^3.3.2"
