--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ dist/
 
 # dependencies
 node_modules/
+.vscode/
 
 # logs
 npm-debug.log*
@@ -19,4 +20,4 @@ pnpm-debug.log*
 
 # macOS-specific files
 .DS_Store
-.vscode
+
